--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "dayjs": "^1.11.13",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
