--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,12 @@
-runtime: nodejs16
+runtime: nodejs18
 
-env: flex
+env_variables:
+  REACT_APP_BE_URL: "http://34.83.186.103"
+  NODE_OPTIONS: "--openssl-legacy-provider"
 
-instance_class: F2
+handlers:
+  - url: /static
+    static_dir: build/static/
+  - url: /
+    static_files: build/index.html
+    upload: build/index.html
