--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "multer": "^1.4.5-lts.1",
+    "notyf": "^3.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
